<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFCFCF">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        android:layout_height="match_parent"
        android:background="#00ffffff">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:id="@+id/contact_backdrop"
                app:layout_collapseMode="parallax"
                android:adjustViewBounds="true"
                android:src="@drawable/map"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
                android:layout_marginTop="250dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="5dp"
                    android:id="@+id/contactCardView">


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">


                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:clickable="true"
                            android:id="@+id/phone"
                            android:background="?attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView4"
                                android:src="@drawable/ic_perm_phone_msg_black_24dp"
                                android:layout_gravity="top|center"
                                android:paddingTop="5dp" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="@color/ColorPrimaryDark"
                                    android:text="@string/contact_phone_title"
                                    android:id="@+id/textView4" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="@string/contact_phone"
                                    android:id="@+id/textView8" />
                            </LinearLayout>

                            <RelativeLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="5dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:clickable="true"
                            android:id="@+id/email"
                            android:background="?attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView"
                                android:src="@drawable/ic_contact_mail_black_24dp"
                                android:layout_gravity="top|center"
                                android:paddingTop="5dp" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="@color/ColorPrimaryDark"
                                    android:text="@string/contact_email_title"
                                    android:id="@+id/textView5" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="@string/contact_email"
                                    android:id="@+id/textViewEmail" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:clickable="true"
                            android:id="@+id/website"
                            android:background="?attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView2"
                                android:src="@drawable/ic_public_black_24dp"
                                android:layout_gravity="top|center"
                                android:paddingTop="5dp" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="@color/ColorPrimaryDark"
                                    android:text="@string/contact_website_title"
                                    android:id="@+id/textView6" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="@string/contact_website"
                                    android:id="@+id/textView2" />

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:clickable="true"
                            android:id="@+id/address"
                            android:background="?attr/selectableItemBackground">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView3"
                                android:src="@drawable/ic_room_black_24dp"
                                android:layout_gravity="top|center"
                                android:paddingTop="5dp" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="@color/ColorPrimaryDark"
                                    android:text="@string/contact_address_title"
                                    android:id="@+id/textView7" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:text="@string/contact_address"
                                    android:id="@+id/textView" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:clickable="true"
                            android:id="@+id/linearLayout" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView9"
                                android:src="@drawable/ic_sentiment_very_satisfied_black_24dp"
                                android:layout_gravity="top|center" />

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="@color/ColorPrimaryDark"
                                    android:text="@string/contact_social_title"
                                    android:id="@+id/textView10" />

                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <ImageView
                                        android:layout_width="44dp"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/facebook"
                                        android:src="@drawable/facebook"
                                        android:layout_gravity="bottom"
                                        android:padding="1dp"
                                        android:clickable="true"
                                        android:layout_margin="5dp" />


                                    <ImageView
                                        android:layout_width="44dp"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/linkedin"
                                        android:src="@drawable/linkedin"
                                        android:padding="1dp"
                                        android:clickable="true"
                                        android:layout_margin="5dp" />


                                    <ImageView
                                        android:layout_width="44dp"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/googleplus"
                                        android:src="@drawable/googleplus"
                                        android:padding="1dp"
                                        android:clickable="true"
                                        android:layout_margin="5dp" />


                                    <ImageView
                                        android:layout_width="44dp"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/twitter"
                                        android:src="@drawable/twitter"
                                        android:padding="1dp"
                                        android:clickable="true"
                                        android:layout_margin="5dp" />
                                </LinearLayout>

                            </LinearLayout>
                        </LinearLayout>


                    </LinearLayout>


                </android.support.v7.widget.CardView>



            </LinearLayout>

        </FrameLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_person_add_black_24dp"
        android:clickable="true"
        style="@style/AppTheme"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:borderWidth="0dp"
        app:layout_anchor="@id/contactCardView"
        app:layout_anchorGravity="top|right|end"
        app:backgroundTint="@color/ColorPrimary"/>

    </android.support.design.widget.CoordinatorLayout>